@@ -1,0 +1,4 @@
+list : doubly_linked_lists.list( string );
+b : boolean;
+b := doubly_linked_lists.clear( list ); -- clear is a procedure
+
