@@ -1,0 +1,3 @@
+list : doubly_linked_lists.list( string );
+doubly_linked_lists.length( list ); -- length is a function
+
